WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32330
V8 ScriptState is missing include for DEFINE_STATIC_LOCAL
https://bugs.webkit.org/show_bug.cgi?id=32330
Summary
V8 ScriptState is missing include for DEFINE_STATIC_LOCAL
Steve Block
Reported
2009-12-09 10:45:58 PST
V8 ScriptState is missing include for DEFINE_STATIC_LOCAL. This is defined in wtf/StdLibExtras.h. This causes a build break on Android. It seems that Chromium picks up the include via other feature-dependent header includes.
Attachments
Patch 1 for Bug 32330
(985 bytes, patch)
2009-12-09 10:52 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2009-12-09 10:52:53 PST
Created
attachment 44546
[details]
Patch 1 for
Bug 32330
WebKit Review Bot
Comment 2
2009-12-09 10:56:17 PST
style-queue ran check-webkit-style on
attachment 44546
[details]
without any errors.
Eric Seidel (no email)
Comment 3
2009-12-09 13:25:05 PST
Comment on
attachment 44546
[details]
Patch 1 for
Bug 32330
LGTM too.
WebKit Commit Bot
Comment 4
2009-12-09 15:32:43 PST
Comment on
attachment 44546
[details]
Patch 1 for
Bug 32330
Clearing flags on attachment: 44546 Committed
r51930
: <
http://trac.webkit.org/changeset/51930
>
WebKit Commit Bot
Comment 5
2009-12-09 15:32:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug