2009-12-09  Steve Block  <steveblock@google.com>

Reviewed by Darin Fisher.

        Adds wtf/StdLibExtras.h include for DEFINE_STATIC_LOCAL in V8 ScriptState.
        https://bugs.webkit.org/show_bug.cgi?id=32330

        Build fix only, no new tests.

        * bindings/v8/ScriptState.cpp: Modified. Adds wtf/StdLibExtras.h include.

Canonical link: https://commits.webkit.org/43355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51930 268f45cc-cd09-0410-ab3c-d52691b4dbfc