WebCore/bindings/v8/ScriptState.cpp
@@ -37,6 +37,7 @@
 #include "ScriptController.h"
 
 #include <wtf/Assertions.h>
+#include <wtf/StdLibExtras.h>
 
 namespace WebCore {
 
